# django-nextjs

./: .gitignore  .prettierignore  Makefile  README.md  next.config.mjs  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt  sample.env  tailwind.config.ts  vercel.json
api/: urls.py  views.py
backend/: settings.py  urls.py
src/app/: layout.tsx  page.tsx
src/app/about/: page.tsx
src/components/: button.tsx  navbar.tsx
src/config/: index.ts
templates/: base.html  index.html
